미션4 css 진행중

--- a/index.html
+++ b/index.html
@@ -6,18 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DatePicker</title>
     <link rel="stylesheet" href="./utils/reset.css" />
+    <link rel="stylesheet" href="utils/theme.css" />
     <link rel="stylesheet" href="./style.css" />
     <script type="module" src="./datePicker.js"></script>
   </head>
   <body>
     <div class="calendar-container">
       <h1>Calendar</h1>
+      <input
+        type="text"
+        name="date-picker"
+        id="date-picker"
+        placeholder="Select date"
+        readonly
+      />
+      <div class="selected-date"></div>
+
       <div class="calendar">
         <div class="calendar-nav">
           <div class="date-month">June</div>
           <div class="date-year">2023</div>
-          <div class="arrow left"></div>
-          <div class="arrow right"></div>
+          <div class="arrow">
+            <i class="bx bxs-left-arrow"></i> <i class="bx bxs-right-arrow"></i>
+          </div>
         </div>
         <div class="calendar-grid">
           <div class="date-week">
