--- a/index.html
+++ b/index.html
@@ -31,17 +31,16 @@
           </div>
         </div>
         <div class="calendar-grid">
-          <div class="date-week">
-            <ul>
-              <li>SUN</li>
-              <li>MON</li>
-              <li>TUE</li>
-              <li>WED</li>
-              <li>THU</li>
-              <li>FRI</li>
-              <li>SAT</li>
-            </ul>
-          </div>
+          <ul class="date-week">
+            <li class="sun">SUN</li>
+            <li class="mon">MON</li>
+            <li class="tue">TUE</li>
+            <li class="wed">WED</li>
+            <li class="thu">THU</li>
+            <li class="fri">FRI</li>
+            <li class="sat">SAT</li>
+          </ul>
+
           <div class="date-day"></div>
         </div>
       </div>
