addActiveClass, removeActiveClass 함수 구현

--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
       <input
         type="text"
         name="date-picker"
-        id="date-picker"
+        id="date-picker-input"
         placeholder="Select date"
         readonly
       />
-      <div class="selected-date"></div>
 
       <div class="calendar">
         <div class="calendar-nav">
