달력 화살표 버튼 클릭함수 구현

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
       <div class="calendar">
         <div class="calendar-nav">
-          <div class="date-month">June</div>
-          <div class="date-year">2023</div>
+          <div class="calendar-month"></div>
+          <div class="calendar-year"></div>
           <div class="arrow">
             <i class="bx bxs-left-arrow"></i> <i class="bx bxs-right-arrow"></i>
           </div>
         </div>
         <div class="calendar-grid">
-          <ul class="date-week">
+          <ul class="calendar-week">
             <li class="sun">SUN</li>
             <li class="mon">MON</li>
             <li class="tue">TUE</li>
@@ -40,7 +40,7 @@
             <li class="sat">SAT</li>
           </ul>
 
-          <div class="date-day"></div>
+          <div class="calendar-day"></div>
         </div>
       </div>
     </div>
